save changes, but install not working

--- a/roles/vegard.feb/templates/feb-response.xml.j2
+++ b/roles/vegard.feb/templates/feb-response.xml.j2
@@ -4,7 +4,7 @@
   <variable name='sharedLocation' value='{{ imshared_location }}'/>
   </variables>
   <server>
-  <repository location='{{ install_extraction_folder }}/FormsImage'/>
+    <repository location='{{ install_extraction_folder }}/FormsImage/repository.xml'/>
   </server>
   <profile id='CommunitySurveys' installLocation='{{ feb_root_folder }}'>
     <data key='cic.selector.arch' value='x86_64'/>
